Complete new_quote function

--- a/hw_project/quotes/templates/quotes/base.html
+++ b/hw_project/quotes/templates/quotes/base.html
@@ -10,27 +10,54 @@
     {% load static %}
     <link rel="stylesheet" href="{% static 'quotes/style.css' %}">
     <title>Homework</title>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
+        crossorigin="anonymous"></script>
 </head>
 <body>
-<div class="container">
-    <div class="row header-box pt-3 mb-3">
-        <div class="col-md-8">
-            <h1>
-                <a href="/" style="text-decoration: none">Quotes to Scrape</a>
-            </h1>
-        </div>
-        <div class="col-md-4">
-            <p>
-            
-                <a href="/login" class="btn btn-primary">Signup</a>
-                <a href="/login" class="btn btn-primary">Login</a>
-                <a href="/login" class="btn btn-primary">Logout</a>
-            
-            </p>
-        </div>
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="{% url 'quotes:root' %}">Home</a>
+        </li>
+        {% if user.is_authenticated %}
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'quotes:new_author' %}">New author</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'quotes:new_quote' %}">New quote</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'users:logout' %}">Logout</a>
+        </li>
+        {% else %}
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'users:signup' %}">Signup</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'users:login' %}">Login</a>
+        </li>
+        {% endif %}
+      </ul>
     </div>
+  </div>
+</nav>
 
+<nav style="margin-bottom: 20px; border-bottom: 2px solid; padding-left: 30px">
+    {% if user.is_authenticated %}
 
+    <div class="dropdown">
+        Welcome <b>{{ user.username }}!</b>
+    </div>
+    {% endif %}
+</nav>
+
+<div class="container">
 
 
     {% block content %} {% endblock %}
