--- a/hw_project/quotes/templates/quotes/index.html
+++ b/hw_project/quotes/templates/quotes/index.html
@@ -2,6 +2,13 @@
 {%load extract%}
 
 {% block content %}
+<div class="row header-box pt-3 mb-3">
+    <div class="col-md-8">
+        <h1>
+            <a href="/" style="text-decoration: none">Quotes to Scrape</a>
+        </h1>
+    </div>
+</div>
 
 <div class="row">
     <div class="col-md-8">
